# tri-rl-starter

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_env.py  test_topology.py
tri_rl_starter/: __init__.py  driver.py  env.py  flip_baseline.py  geometry.py  mesh.py  metrics.py  plotting.py  smoothing.py  topology.py
